adding MQTT support

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -23,3 +23,12 @@ services:
   cadvisor:
   grafana:
   pushgateway:
+  networkowl_mqtt:
+    image: hikhvar/mqtt2prometheus
+    ports:
+      - "9641:9641"
+    volumes:
+      - ./mqtt2prometheus/networkowl_mqtt.yaml:/config.yaml
+    networks:
+      - back-tier
+    restart: always
