--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,6 +6,7 @@ services:
       - pushgateway
       - alertmanager
       - networkowl_mqtt
+      - metriful_mqtt
 
 #  node-exporter:
   alertmanager:
@@ -18,6 +19,15 @@ services:
       - "9641:9641"
     volumes:
       - ./mqtt2prometheus/networkowl_mqtt.yaml:/config.yaml
+    networks:
+      - back-tier
+    restart: always
+  metriful_mqtt:
+    image: hikhvar/mqtt2prometheus
+    ports:
+      - "9642:9641"
+    volumes:
+      - ./mqtt2prometheus/metriful_mqtt.yaml:/config.yaml
     networks:
       - back-tier
     restart: always
